--- a/html5/detail.html
+++ b/html5/detail.html
@@ -10,9 +10,9 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="format-detection" content="telephone=no">
-    <link rel="stylesheet" href="static/css/x-admin.css" media="all">
-    <link rel="stylesheet" href="static/css/app.css" media="all">
-    <link rel="stylesheet" href="static/lib/fontello/css/fontello.css" media="all">
+    <link rel="stylesheet" href="/static/css/x-admin.css" media="all">
+    <link rel="stylesheet" href="/static/css/app.css" media="all">
+    <link rel="stylesheet" href="/static/lib/fontello/css/fontello.css" media="all">
     <style type="text/css">
         .icon-play-circled, .icon-pause-circled {font-size: 200%;}
     </style>
