--- a/test.htm
+++ b/test.htm
@@ -13,11 +13,11 @@
         <link rel="stylesheet" href="static/css/x-admin.css" media="all">
     </head>
     <body>
-        <form class="layui-form layui-form-pane" action="http://cooperation.artime365.com/api/save" method="post">
+        <form class="layui-form layui-form-pane" action="/api/save" method="post">
             <input type="text" name="record" value="http://onh9qmz11.bkt.clouddn.com/record_20170605170621">
             <input type="submit" name="提交">
         </form>
-        <form class="layui-form layui-form-pane" action="http://cooperation.artime365.com/api/save" method="post">
+        <form class="layui-form layui-form-pane" action="/api/save" method="post">
             <input type="text" name="record" value="http://onh9qmz11.bkt.clouddn.com/record_20170605170621">
             <input type="text" name="sogou" value="1">
             <input type="submit" name="提交">
