--- a/html5/sogou.html
+++ b/html5/sogou.html
@@ -3,7 +3,7 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>我是第<?php echo $row->count_id?>位在搜狗浏览器为山区孩子读诗的人，快来和我一起为爱读诗！</title>
+    <title>我是第1位在搜狗浏览器为山区孩子读诗的人，快来和我一起为爱读诗！</title>
     <meta name="renderer" content="webkit">
     <meta name="description" content="你为山区的孩子读诗，我为山区的孩子送书" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
@@ -30,7 +30,7 @@
     <div>
         <div class="f-l" style="width:30%"><img src="static/images/10_02.png" width="100%"></div>
         <div class="f-l" style="width:70%;position: relative;"><img src="static/images/10_03.png" width="100%">
-            <div style="font-size:140%;position: absolute;color: #ed3f00;letter-spacing:4px;font-weight: bold;top: 0;"><?php echo $row->count_id?></div>
+            <div style="font-size:140%;position: absolute;color: #ed3f00;letter-spacing:4px;font-weight: bold;top: 0;">1</div>
         </div>
     </div>
 
